# ndatmx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.buildr
cli/: main.cpp
daemon/: config.cpp  config.hpp  ipc.cpp  ipc.hpp  main.cpp  mgit.cpp  mgit.hpp  ndxparser.cpp  ndxparser.hpp  platform.cpp  platform.hpp  project.cpp  project.hpp  runner.cpp  runner.hpp  scheduler.cpp  scheduler.hpp
